--- a/views/createcommunity.ejs
+++ b/views/createcommunity.ejs
@@ -49,6 +49,8 @@
             <li><a href="/createcommunity">Create Community</a></li>
             <li><a href="/communitieslist">Community List</a></li>
             <li><a href="/password">Change Password</a></li>
+            <li><a href="/requests">Requests</a></li>
+            <li><a href="/logout">Logout</a></li>
           </ul>
         </div>
       </nav>
@@ -80,7 +82,7 @@
       <!--for image-->
       <div class="file-field input-field">
         <div class="btn grey">
-          <span>File</span>
+          <span>Upload Image</span>
           <input name="myImage" type="file">
         </div>
         <div class="file-path-wrapper">
