--- a/views/adminhome.ejs
+++ b/views/adminhome.ejs
@@ -16,12 +16,10 @@
   <body>
      <nav class="navbar navbar-light bg-light">
                 <a style="color:rgb(59, 81, 182)" class="navbar-brand">Community Builder</a>
-                <a class="btn btn-primary" href="/requests" role="button">
-                  Requests <span class="badge badge-light">4</span>
-                </a>
                 <form class="form-inline">
-                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline my-2 my-sm-0" type="submit">Search</button>
+                    <a class="btn btn-danger" href="/requests" role="button">
+                      Requests
+                    </a>
                   <a class="btn btn-primary" href="/logout" role="button">Logout</a>
                 </form>
      </nav>
